<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ecoapp.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.example.ecoapp.fragments.ViewFragment"
        android:label="@string/title_view"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.ecoapp.fragments.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_attach"
        android:name="com.example.ecoapp.fragments.AttachFragment"
        android:label="@string/title_attach"
        tools:layout="@layout/fragment_attach">
        <action
            android:id="@+id/action_navigation_add_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.ecoapp.fragments.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>
